--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Git Hub Demo</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ad
+      eaque, quidem laudantium provident eos at praesentium error repellendus
+      rerum, cumque beatae ut non recusandae officia amet soluta alias veniam.
+    </p>
   </body>
 </html>
